Project

General

Profile

Actions

Bug #64710

open

kafka: RGW hangs when broker is down for no persistent notifications

Added by Yuval Lifshitz 2 months ago. Updated about 2 months ago.

Status:
Pending Backport
Priority:
Urgent
Target version:
-
% Done:

0%

Source:
Tags:
kafka backport_processed
Backport:
squid, reef, quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

based on this comment: https://github.com/ceph/ceph/pull/55051#issuecomment-1961950841
the main issue is that the librdkafka timeout is set by defult to 5 minutes.
due to the 30 seconds idle timeout, we release the pending coroutines after 30 seconds.
but this is still causing the RGW to hang (as it exhaust all of its front-end connections).


Related issues 3 (2 open1 closed)

Copied to rgw - Backport #64885: reef: kafka: RGW hangs when broker is down for no persistent notificationsIn ProgressYuval LifshitzActions
Copied to rgw - Backport #64886: quincy: kafka: RGW hangs when broker is down for no persistent notificationsIn ProgressYuval LifshitzActions
Copied to rgw - Backport #64887: squid: kafka: RGW hangs when broker is down for no persistent notificationsResolvedYuval LifshitzActions
Actions #1

Updated by Yuval Lifshitz 2 months ago

  • Pull request ID set to 55952
Actions #2

Updated by Yuval Lifshitz 2 months ago

  • Backport changed from squid, reef, quincy to squid, reef, quincy, pacific
Actions #3

Updated by Casey Bodley about 2 months ago

  • Status changed from New to Fix Under Review
  • Backport changed from squid, reef, quincy, pacific to squid, reef, quincy
Actions #4

Updated by Yuval Lifshitz about 2 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot about 2 months ago

  • Copied to Backport #64885: reef: kafka: RGW hangs when broker is down for no persistent notifications added
Actions #6

Updated by Backport Bot about 2 months ago

  • Copied to Backport #64886: quincy: kafka: RGW hangs when broker is down for no persistent notifications added
Actions #7

Updated by Backport Bot about 2 months ago

  • Copied to Backport #64887: squid: kafka: RGW hangs when broker is down for no persistent notifications added
Actions #8

Updated by Backport Bot about 2 months ago

  • Tags changed from kafka to kafka backport_processed
Actions

Also available in: Atom PDF