rgw/kafka: set message timeout to 5 seconds

also increase the idle timeout to 30 seconds.
test instructions:
https://gist.github.com/yuvalif/33487bff19883e3409caa8a843a0b353

Fixes: https://tracker.ceph.com/issues/64710

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>
(cherry picked from commit 1c13850f24dbb90c33a12c6da338956c2e83811b)

Conflicts:
	src/common/options/rgw.yaml.in
	src/rgw/rgw_kafka.cc